5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1712_2496.log
== TEST (2019-05-13 14:33:17) 
-- CODE:
num = int(input("Insira um numero: "))
soma = 0

while (num <= 10):
	soma = soma + num
	num = int(input("Insira um numero: "))
print(soma)

-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:34:16) 
-- CODE:
num = int(input("Insira um numero: "))
soma = 0

while (num <= 10):
	soma = soma + num
	num = int(input("Insira um numero: "))
print(soma)

-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:36:09) 
-- CODE:
num = int(input("Insira um numero: "))
soma = 0
conta = 0
while (num <= 10):
	soma = soma + num
	conta = conta + 1 
	num = int(input("Insira um numero: "))
if (conta > 0):
print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:37:16) 
-- CODE:
num = int(input("Insira um numero: "))
soma = 0
conta = 0
while (num <= 10):
	soma = soma + num
	conta = conta + 1 
	num = int(input("Insira um numero: "))
if (conta > 0):
	print(soma)

-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:37:29) 
-- CODE:
num = int(input("Insira um numero: "))
soma = 0
conta = 0
while (num <= 10):
	soma = soma + num
	conta = conta + 1 
	num = int(input("Insira um numero: "))
if (conta > 0):
	print(soma)

-- EXECUTION TIME:
0.238828
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:37:46) 
-- CODE:
num = int(input("Insira um numero: "))
soma = 0

while (num <= 10):
	soma = soma + num
	num = int(input("Insira um numero: "))
if (conta > 0):
	print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (conta > 0):
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:48:26) 
-- CODE:
num = int(input("Insira um numero: "))

soma = 0

while (num != -1):
	soma = soma + num
	num = int(input("Insira um numero: "))
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:48:39) 
-- CODE:
num = int(input("Insira um numero: "))

soma = 0

while (num != -1):
	soma = soma + num
	num = int(input("Insira um numero: "))
print(soma)

-- EXECUTION TIME:
0.145533
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
